# benchmarkagent_florentxlundaisociety

./: .env.example  .gitignore  CLAUDE.md  README.md
apps/backend/: pyproject.toml
apps/backend/apps/backend/sessions/743202489145/: chat.jsonl
apps/backend/apps/backend/sessions/78fd9934340b/: chat.jsonl
apps/backend/apps/backend/sessions/f115137bc94b/: chat.jsonl
apps/backend/src/backend/: config.py  main.py  sessions.py
apps/backend/src/backend/agent/: orchestrator.py  tools.py
apps/backend/src/backend/agent/prompts/: orchestrator.md
apps/backend/src/backend/api/: artifact.py  chat.py  config.py  export.py  runs.py  sessions.py
apps/backend/tests/: conftest.py  test_agent_tools.py  test_artifact_api.py  test_config_api.py  test_export_and_runs.py  test_sessions_api.py
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/components/: ArtifactTabs.tsx  ChatPanel.tsx  FileEditor.tsx  MonitorTab.tsx  RunDetail.tsx  RunsTab.tsx
apps/frontend/src/lib/: api.ts  sse.ts
examples/classification_demo/: adapter.py  dataset.jsonl  evaluator.py  manifest.yaml
